k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: assessment-app
  labels:
    app: assessment-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: assessment-app
  template:
    metadata:
      labels:
        app: assessment-app
    spec:
      containers:
        - name: assessment-app
          image: herianto9671/assessment-app:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: assessment-service
spec:
  selector:
    app: assessment-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort
