k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: assessment-service
  labels:
    app: assessment-app
    service: assessment-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: assessment-app

---
apiVersion: v1
kind: Service
metadata:
  name: assessment-service-headless
  labels:
    app: assessment-app
    service: assessment-service-headless
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: assessment-app
